# hesed

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  config-local.toml  config.docker.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/: audit.rs  authz.rs  breaker.rs  config.rs  discovery.rs  dlp.rs  heartbeat.rs  hitl.rs  interceptor.rs  main.rs  proxy.rs  stdio.rs
